# data-analysis-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  agent.py  alembic.ini  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.claude/agents/: agent-builder.md  code-generator.md  qa-auditor.md  reviewer.md  spec-projector.md  spec-reviewer.md  spec-writer.md  tech-designer.md
.claude/commands/: build.md  change.md  deploy.md  gates.md  maintain.md  new.md  sync.md
.githooks/: pre-commit
.github/agents/: agent-builder.md  drift-auditor.md  plan-reviewer.md  planner.md  qa-auditor.md  spec-reviewer.md  spec-writer.md  tech-designer.md
agent/: __main__.py  analyze.py  config.py  db.py  eval_lint.py  evals.py  gate_eval.py  graph.py  guardrails.py  llm.py  observability.py  runner.py  server.py  sessions.py  state.py  tools.py
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_data_analysis.py  640afb1454c6_add_token_columns.py  825aebc0ca14_phase1_session_dataset_query_tables.py  ace9cee8e99b_initial.py  add624ae1661_add_datasets.py  b3f4a1c9d2e7_phase2_query_chart_followups_thinking.py  bea31c458ced_phase1_datasets_profiles_sessions_.py  c7d4e3f2a1b8_session_datasource_many_to_many.py  daa92380e008_add_usage_stats_to_query_records.py  e2c8b5a1d9f3_tool_registry_and_sessions.py  ea24c9a7ded3_sessions_datasets_messages.py
data/sample/: sales.csv
docs/: plan.md
examples/calc-agent/: README.md  agent.py  requirements.txt  test_agent.py
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/app/: ChatPage.js  layout.tsx  page.tsx
frontend/components/: DatasetsScreen.tsx  ErrorToastRegion.tsx  QueryScreen.tsx  SessionSidebar.tsx
harness/: README.md  generate.py  harness.md  layout.md  philosophy.md
harness/agents/: agent-builder.md  drift-auditor.md  plan-reviewer.md  planner.md  qa-auditor.md  spec-reviewer.md  spec-writer.md  tech-designer.md
harness/method/: layout.md  lifecycle.md  reconcile.md
harness/patterns/: agentic-ai.md  context-engineering.md  deploy.md  durability.md  (+14 more)
scaffold/: README.md
scripts/: demo_gate.sh
spec/: README.md  ROADMAP.md  agent.md  agentic-ai.md  api.md  architecture.md  code-style.md  data.md  product.md  roadmap.md  tech-stack.md  ui.md
src/: __main__.py  runner.py  server.py  tools.py
tests/: conftest.py  test_analyze.py  test_api_flow.py  test_capabilities.py  test_datasets_fr.py  test_demo_gate.py  test_eval_lint.py  test_file_retention.py  test_llm_live_fr.py  test_loop.py  test_multi_source_gate.py  test_sql_explorer_gate.py  test_upload_fr.py
ui/: package-lock.json
(+299 files in other folders)
