[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-analysis-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.137.2",
    "uvicorn[standard]==0.49.0",
    "python-multipart==0.0.32",
    "langgraph==1.2.6",
    "langchain==1.3.10",
    "langchain-core==1.4.8",
    "langchain-google-genai==4.2.5",
    "langgraph-checkpoint-sqlite==3.1.0",
    "sqlalchemy[asyncio]==2.0.51",
    "aiosqlite==0.22.1",
    "asyncpg==0.31.0",
    "pydantic-settings==2.14.2",
    "pandas==3.0.3",
    "plotly==6.1.2",
    "httpx==0.28.1",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agent"]
