[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "Multi-source data analysis agent — local file upload (CSV/JSON) with Python/pandas"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic-settings==2.7.0",
    "langchain-core==0.3.29",
    "langchain-google-genai==2.0.8",
    "langgraph==0.2.69",
    "langchain-community==0.3.14",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.20.0",
    "pandas==2.2.3",
    "numpy==2.2.1",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-playwright==0.6.2",
    "playwright==1.49.1",
    "anyio==4.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
